# TexDocs-macOS

./: .gitignore  .gitmodules  .swiftlint.yml  .travis.yml  Cartfile  Cartfile.resolved  Dockerfile  README.md  crowdin.yml  mergegenstrings.py
App/Base.lproj/: Localizable.strings
App/Raw Assets/: CommandExternal.xcf  Template.xcf
App/TexDocs/: Editors.storyboard
App/TexDocs.xcodeproj/: project.pbxproj
CollaborationKit/: CollaborationClient.swift  CollaborationCursor.swift  CollaborationKit.h  CollaborationProtocol.swift  CollaborationUser.swift  Info.plist
CollaborationKit/Collaboration Protocol/: CollaborationProtocol.swift  (+3 more)
External Libraries/: WebSocket.swift
LabeledTextField/: Info.plist  LabeledTextField.h  LabeledTextField.swift
MessagePackKit/: MessagePackCodable.swift  MessagePackKit.h  MessagePackValuePrimitive.swift
Server/: requirements.txt
TexDocs/: Cartfile  Cartfile.resolved  Sheets.storyboard
TexDocs.xcodeproj/: project.pbxproj
TexDocsCollaboration/: Package.swift  README.md
TexDocsServer/: Cargo.toml  Dockerfile  Package.swift  README.md  main.py  package-lock.json
TexDocsServer/TexDocsServer/: main.swift
TexDocsServer/TexDocsServer.xcodeproj/: project.pbxproj
TexDocsServer/TexDocsServer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TexDocsServer/data/: projects.json
TexDocsServer/src/: client.rs  main.py  main.rs  server.rs  websocket.js
TexDocsServerOld/: package.json
TexDocsTests/: TexDocsTests.swift
TexDocsUITests/: TexDocsUITests.swift
UIElementsKit/: ModernTabBar.swift  UIElementsKit.h
(+294 files in other folders)
