[package]
name = "tex_docs_server"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]

[dependencies]
serde_json = "1.0"
serde = "1.0.18"
serde_derive = "1.0.19"
uuid = { version = "0.5", features = ["v4"] }
env_logger = "0.3.1"
log = "0.3.1"
mio = "0.4"

[dependencies.concurrent-hashmap]
version = "0.2.2"
default-features = false

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
